Fix swagger & url
