# swagger.json
@@ -11,12 +11,10 @@
   },
   "host": "mighty-gorge-25136.herokuapp.com",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Users",
-      "description": "API for users in the system"
-    }
-  ],
+  "tags": [{
+    "name": "Users",
+    "description": "API for users in the system"
+  }],
   "schemes": [
     "https"
   ],
@@ -32,7 +30,7 @@
         "tags": [
           "Users"
         ],
-        "description": "로그인 페이지 호출",
+        "summary": "로그인 페이지 호출",
         "produces": [
           "application/json"
         ],
@@ -49,30 +47,28 @@
         "tags": [
           "Users"
         ],
-        "description": "login",
+        "summary": "login",
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userName": {
-                  "type": "string",
-                  "example": "aa"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "aa"
-                }
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "userName": {
+                "type": "string",
+                "example": "aa"
+              },
+              "password": {
+                "type": "string",
+                "example": "aa"
               }
             }
           }
-        ],
+        }],
         "responses": {
           "200": {
             "description": "OK",
@@ -86,7 +82,7 @@
         "tags": [
           "Users"
         ],
-        "description": "logout",
+        "summary": "logout",
         "responses": {
           "200": {
             "description": "User is found",
@@ -97,9 +93,9 @@
         }
       }
     },
-    "/member": {
+    "/members": {
       "get": {
-        "description": "회원 가입 페이지 호출",
+        "summary": "회원 가입 페이지 호출",
         "tags": [
           "members"
         ],
@@ -117,26 +113,24 @@
         "tags": [
           "members"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userName": {
-                  "type": "string",
-                  "example": "aa"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "aa"
-                }
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "userName": {
+                "type": "string",
+                "example": "aa"
+              },
+              "password": {
+                "type": "string",
+                "example": "aa"
               }
             }
           }
-        ],
+        }],
         "responses": {
           "200": {
             "description": "User is updated",
@@ -145,9 +139,172 @@
             }
           }
         }
+      },
+      "delete": {
+        "summary": "회원 탈퇴",
+        "tags": [
+          "members"
+        ],
+        "responses": {
+          "200": {
+            "description": "User is deleted",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        }
+      }
+    },
+    "/posts": {
+      "get": {
+        "summary": "게시판 전체 호출",
+        "tags": [
+          "posts"
+        ],
+        "responses": {
+          "200": {
+            "description": "User is deleted",
+            "schema": {
+              "$ref": "#/definitions/Post"
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "게시글 작성",
+        "tags": [
+          "posts"
+        ],
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "todo": {
+                "type": "string",
+                "example": "aa"
+              },
+              "date": {
+                "type": "date",
+                "example": "2018-10-30"
+              }
+            }
+          }
+        }],
+        "responses": {
+          "200": {
+            "description": "User is updated",
+            "schema": {
+              "$ref": "#/definitions/Post"
+            }
+          }
+        }
+      }
+    },
+    "/posts/create": {
+      "get": {
+        "summary": "게시판 작성 페이지 호출",
+        "tags": [
+          "posts"
+        ],
+        "responses": {
+          "200": {
+            "description": "User is deleted",
+            "schema": {
+              "$ref": "#/definitions/Post"
+            }
+          }
+        }
+      }
+    },
+    "/posts/:_id/edit": {
+      "get": {
+        "summary": "게시판 수정 페이지 호출",
+        "tags": [
+          "posts"
+        ],
+        "parameters": [
+          {
+            "name": "_id",
+            "in": "params",
+            "type": "string",
+            "default": "aaaaa"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User is deleted",
+            "schema": {
+              "$ref": "#/definitions/Post"
+            }
+          }
+        }
+      }
+    },
+    "/posts/:_id": {
+      "put": {
+        "summary": "게시글 수정",
+        "tags": [
+          "posts"
+        ],
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": "aaaaaa"
+              },
+              "todo": {
+                "type": "string",
+                "example": "aa"
+              },
+              "date": {
+                "type": "date",
+                "example": "2018-10-30"
+              }
+            }
+          }
+        }],
+        "responses": {
+          "200": {
+            "description": "User is deleted",
+            "schema": {
+              "$ref": "#/definitions/Post"
+            }
+          }
+        }
+      },
+      "delete": {
+        "summary": "게시글 삭제",
+        "tags": [
+          "posts"
+        ],
+        "parameters": [
+          {
+            "name": "_id",
+            "in": "query",
+            "type": "string",
+            "default": "aaaaa"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User is deleted",
+            "schema": {
+              "$ref": "#/definitions/Post"
+            }
+          }
+        }
       }
     }
   },
+
   "definitions": {
     "User": {
       "required": [
@@ -164,6 +321,29 @@
           "uniqueItems": true
         },
         "password": {
+          "type": "string"
+        }
+      }
+    },
+    "Post": {
+      "required": [
+        "todo",
+        "date"
+      ],
+      "properties": {
+        "_id": {
+          "type": "string",
+          "uniqueItems": true
+        },
+        "todo": {
+          "type": "string",
+          "uniqueItems": true
+        },
+        "date": {
+          "type": "date",
+          "uniqueItems": true
+        },
+        "userId": {
           "type": "string"
         }
       }
